--- a/intropage/index.html
+++ b/intropage/index.html
@@ -31,6 +31,15 @@
       h1 {
         font-size: 50px;
       }
+      .chunk {
+        margin: 50px 0 50px 0;
+      }
+      a {
+        color: #414141;
+      }
+      a:hover {
+        text-decoration: none;
+      }
     </style>
   </head>
 
@@ -64,17 +73,25 @@
         <h1>SKIM</h1>
         <p class="lead">Is the story too long? Skim it!</p>
        
-        <p>The project is an exploration of long-form stories on smartphones.</br>
+        <p class="intro">The project is an exploration of long-form stories on smartphones.</br>
         Click the image to explore it on your phone. | @ #SNDMakes March 21-23, 2014</p>
 
 
 		<div>	
-        <h2>#1 "summary card"</h2>   
-          <a href="http://kklai.github.io/skim/six-miles-out"><img src="1.png" width="600px" /></a>
+      <div class="chunk">
+          <a href="http://kklai.github.io/skim/six-miles-out">
+            <h2>#1 "Summary Cards"</h2>
+            <img src="1.png" width="500px" />
+          </a>
+      </div>
 
-        <h2>#2 "anchor"</h2>  
-          <a href="http://kklai.github.io/skim/kony"><img src="2.png" width="600px" /></a>
+      <div class="chunk">
+          <a href="http://kklai.github.io/skim/kony">
+            <h2>#2 "Anchor"</h2>
+            <img src="2.png" width="500px" />
+          </a>
         </div>
+    </div>
           
     <div id="team">
         <h2>Team Blue</h2>
